--- a/store/composer.json
+++ b/store/composer.json
@@ -7,7 +7,8 @@
         "reactivex/rxphp": "^1.3",
         "atoum/atoum": "^2.7",
         "guzzlehttp/guzzle": "~6.0",
-        "react/http": "^0.4.1"
+        "react/http": "^0.4.1",
+        "rx/http": "^0.2.0"
     },
     "license": "WTFPL",
     "authors": [
